@@ -1,5 +1,5 @@
 <%block name="documentclass">
-\documentclass[a4paper,10pt]{article}
+\documentclass[a4paper,13pt]{article}
 </%block>
 
 <%block name="use_packages">
